sample-app/sample-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysample-deployment
  namespace: sample-app
  labels:
    app: mysample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysample
  template:
    metadata:
      labels:
        app: mysample
    spec:
      containers:
      - name: mysample
        image: microsoft/dotnet-samples:aspnetapp
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
