sample-app/sample-app.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysample-service
  namespace: sample-app
spec:
  selector:
    app: mysample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
