sample-app/sample-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysample-ingress
  namespace: sample-app
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kube.local
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: mysample-service
            port: 
              number: 8080
